macos/Classes/trtc_c_api/trtc_cloud.h

// 8.3 TARGET_PLATFORM_DESKTOP || __ANDROID__
trtc_c_api int trtc_cloud_stop_system_audio_loopback(trtc_cloud instance);
// 8.4
trtc_c_api int trtc_cloud_set_system_audio_loopback_volume(trtc_cloud instance, uint32_t volume);
// 9.1
trtc_c_api int trtc_cloud_start_screen_capture(trtc_cloud instance,
                                               tx_view view,
                                               int type,
                                               trtc_video_enc_param_t* param);
// 9.2
trtc_c_api int trtc_cloud_stop_screen_capture(trtc_cloud instance);
// 9.3
trtc_c_api int trtc_cloud_pause_screen_capture(trtc_cloud instance);
// 9.4
trtc_c_api int trtc_cloud_resume_screen_capture(trtc_cloud instance);
// 9.5 TARGET_PLATFORM_DESKTOP
trtc_c_api int trtc_cloud_get_screen_capture_source_list(
    trtc_cloud instance,
    trtc_size_t thumbnail,
    trtc_size_t icon,
    trtc_screen_capture_source_list* source_list,
    int* count);
trtc_c_api int trtc_cloud_get_screen_capture_sources_info(
    trtc_screen_capture_source_list source_list,
    int index,
    trtc_screen_capture_source_info_t* source_info);
trtc_c_api void trtc_cloud_release_screen_capture_sources_list(
    trtc_screen_capture_source_list source_list);
// 9.6 TARGET_PLATFORM_DESKTOP
trtc_c_api int trtc_cloud_select_screen_capture_target(trtc_cloud instance,
                                                       trtc_screen_capture_source_info_t source,
                                                       trtc_rect_t capture_rect,
                                                       trtc_screen_capture_property_t property);
// 9.7
trtc_c_api int trtc_cloud_set_sub_stream_encoder_param(trtc_cloud instance,
                                                       int video_resolution,
                                                       int res_mode,
                                                       uint32_t video_fps,
                                                       uint32_t video_bitrate,
                                                       uint32_t min_video_bitrate,
                                                       bool enable_adjust_res);
// 9.9
trtc_c_api int trtc_cloud_add_excluded_share_window(trtc_cloud instance, tx_view window_id);
// 9.10
trtc_c_api int trtc_cloud_remove_excluded_share_window(trtc_cloud instance, tx_view window_id);
// 9.11
trtc_c_api int trtc_cloud_remove_all_excluded_share_windows(trtc_cloud instance);
// 9.12
trtc_c_api int trtc_cloud_add_included_share_window(trtc_cloud instance, tx_view window_id);
// 9.13
trtc_c_api int trtc_cloud_remove_included_share_window(trtc_cloud instance, tx_view window_id);
// 9.14
trtc_c_api int trtc_cloud_remove_all_included_share_windows(trtc_cloud instance);
// 10.1
trtc_c_api int trtc_cloud_enable_custom_video_capture(trtc_cloud instance,
                                                      int stream_ype,
                                                      bool enable);
// 10.2
trtc_c_api int trtc_cloud_send_custom_video_data(trtc_cloud instance,
                                                 int stream_type,
                                                 trtc_video_frame_t frame);
// 10.3
trtc_c_api int trtc_cloud_enable_custom_audio_capture(trtc_cloud instance, bool enable);