lib/bindings/trtc/ffi_bindings.dart


  /// 8.3 TARGET_PLATFORM_DESKTOP
  int stop_system_audio_loopback(
    trtc_cloud instance,
  ) {
    return _stop_system_audio_loopback(
      instance,
    );
  }

  late final _stop_system_audio_loopbackPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_stop_system_audio_loopback');
  late final _stop_system_audio_loopback =
      _stop_system_audio_loopbackPtr.asFunction<int Function(trtc_cloud)>();

  /// 8.4
  int set_system_audio_loopback_volume(
    trtc_cloud instance,
    int volume,
  ) {
    return _set_system_audio_loopback_volume(
      instance,
      volume,
    );
  }

  late final _set_system_audio_loopback_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Uint32)>>(
          'trtc_cloud_set_system_audio_loopback_volume');
  late final _set_system_audio_loopback_volume =
      _set_system_audio_loopback_volumePtr
          .asFunction<int Function(trtc_cloud, int)>();

  /// 9.1
  int start_screen_capture(
    trtc_cloud instance,
    tx_view view,
    int type,
    ffi.Pointer<trtc_video_enc_param_t> param,
  ) {
    return _start_screen_capture(
      instance,
      view,
      type,
      param,
    );
  }

  late final _start_screen_capturePtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(trtc_cloud, tx_view, ffi.Int,
                  ffi.Pointer<trtc_video_enc_param_t>)>>(
      'trtc_cloud_start_screen_capture');
  late final _start_screen_capture = _start_screen_capturePtr.asFunction<
      int Function(
          trtc_cloud, tx_view, int, ffi.Pointer<trtc_video_enc_param_t>)>();

  /// 9.2
  int stop_screen_capture(
    trtc_cloud instance,
  ) {
    return _stop_screen_capture(
      instance,
    );
  }

  late final _stop_screen_capturePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_stop_screen_capture');
  late final _stop_screen_capture =
      _stop_screen_capturePtr.asFunction<int Function(trtc_cloud)>();

  /// 9.3
  int pause_screen_capture(
    trtc_cloud instance,
  ) {
    return _pause_screen_capture(
      instance,
    );
  }

  late final _pause_screen_capturePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_pause_screen_capture');
  late final _pause_screen_capture =
      _pause_screen_capturePtr.asFunction<int Function(trtc_cloud)>();

  /// 9.4
  int resume_screen_capture(
    trtc_cloud instance,
  ) {
    return _resume_screen_capture(
      instance,
    );
  }

  late final _resume_screen_capturePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_resume_screen_capture');
  late final _resume_screen_capture =
      _resume_screen_capturePtr.asFunction<int Function(trtc_cloud)>();

  /// 9.5 TARGET_PLATFORM_DESKTOP
  int get_screen_capture_source_list(
    trtc_cloud instance,
    trtc_size_t thumbnail,
    trtc_size_t icon,
    ffi.Pointer<trtc_screen_capture_source_list> source_list,
    ffi.Pointer<ffi.Int> count,
  ) {
    return _get_screen_capture_source_list(
      instance,
      thumbnail,
      icon,
      source_list,
      count,
    );
  }

  late final _get_screen_capture_source_listPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  trtc_cloud,
                  trtc_size_t,
                  trtc_size_t,
                  ffi.Pointer<trtc_screen_capture_source_list>,
                  ffi.Pointer<ffi.Int>)>>(
      'trtc_cloud_get_screen_capture_source_list');
  late final _get_screen_capture_source_list =
      _get_screen_capture_source_listPtr.asFunction<
          int Function(
              trtc_cloud,
              trtc_size_t,
              trtc_size_t,
              ffi.Pointer<trtc_screen_capture_source_list>,
              ffi.Pointer<ffi.Int>)>();

  int get_screen_capture_sources_info(
    trtc_screen_capture_source_list source_list,
    int index,
    ffi.Pointer<trtc_screen_capture_source_info_t> source_info,
  ) {
    return _get_screen_capture_sources_info(
      source_list,
      index,
      source_info,
    );
  }

  late final _get_screen_capture_sources_infoPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(trtc_screen_capture_source_list, ffi.Int,
                  ffi.Pointer<trtc_screen_capture_source_info_t>)>>(
      'trtc_cloud_get_screen_capture_sources_info');
  late final _get_screen_capture_sources_info =
      _get_screen_capture_sources_infoPtr.asFunction<
          int Function(trtc_screen_capture_source_list, int,
              ffi.Pointer<trtc_screen_capture_source_info_t>)>();

  void release_screen_capture_sources_list(
    trtc_screen_capture_source_list source_list,
  ) {
    return _release_screen_capture_sources_list(
      source_list,
    );
  }

  late final _release_screen_capture_sources_listPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(trtc_screen_capture_source_list)>>(
      'trtc_cloud_release_screen_capture_sources_list');
  late final _release_screen_capture_sources_list =
      _release_screen_capture_sources_listPtr
          .asFunction<void Function(trtc_screen_capture_source_list)>();

  /// 9.6 TARGET_PLATFORM_DESKTOP
  int select_screen_capture_target(
    trtc_cloud instance,
    trtc_screen_capture_source_info_t source,
    trtc_rect_t capture_rect,
    trtc_screen_capture_property_t property,
  ) {
    return _select_screen_capture_target(
      instance,
      source,
      capture_rect,
      property,
    );
  }

  late final _select_screen_capture_targetPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(trtc_cloud, trtc_screen_capture_source_info_t,
                  trtc_rect_t, trtc_screen_capture_property_t)>>(
      'trtc_cloud_select_screen_capture_target');
  late final _select_screen_capture_target =
      _select_screen_capture_targetPtr.asFunction<
          int Function(trtc_cloud, trtc_screen_capture_source_info_t,
              trtc_rect_t, trtc_screen_capture_property_t)>();

  /// 9.8 TARGET_PLATFORM_DESKTOP
  int add_excluded_share_window(
    trtc_cloud instance,
    tx_view window_id,
  ) {
    return _add_excluded_share_window(
      instance,
      window_id,
    );
  }

  late final _add_excluded_share_windowPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, tx_view)>>(
          'trtc_cloud_add_excluded_share_window');
  late final _add_excluded_share_window = _add_excluded_share_windowPtr
      .asFunction<int Function(trtc_cloud, tx_view)>();

  /// 9.9 TARGET_PLATFORM_DESKTOP
  int remove_excluded_share_window(
    trtc_cloud instance,
    tx_view window_id,
  ) {
    return _remove_excluded_share_window(
      instance,
      window_id,
    );
  }

  late final _remove_excluded_share_windowPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, tx_view)>>(
          'trtc_cloud_remove_excluded_share_window');
  late final _remove_excluded_share_window = _remove_excluded_share_windowPtr
      .asFunction<int Function(trtc_cloud, tx_view)>();

  /// 9.10 TARGET_PLATFORM_DESKTOP
  int remove_all_excluded_share_windows(
    trtc_cloud instance,
  ) {
    return _remove_all_excluded_share_windows(
      instance,
    );
  }

  late final _remove_all_excluded_share_windowsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_remove_all_excluded_share_windows');
  late final _remove_all_excluded_share_windows =
      _remove_all_excluded_share_windowsPtr
          .asFunction<int Function(trtc_cloud)>();

  /// 9.11 TARGET_PLATFORM_DESKTOP
  int add_included_share_window(
    trtc_cloud instance,
    tx_view window_id,
  ) {
    return _add_included_share_window(
      instance,
      window_id,
    );
  }

  late final _add_included_share_windowPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, tx_view)>>(
          'trtc_cloud_add_included_share_window');
  late final _add_included_share_window = _add_included_share_windowPtr
      .asFunction<int Function(trtc_cloud, tx_view)>();

  /// 9.12 TARGET_PLATFORM_DESKTOP
  int remove_included_share_window(
    trtc_cloud instance,
    tx_view window_id,
  ) {
    return _remove_included_share_window(
      instance,
      window_id,
    );
  }

  late final _remove_included_share_windowPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, tx_view)>>(
          'trtc_cloud_remove_included_share_window');
  late final _remove_included_share_window = _remove_included_share_windowPtr
      .asFunction<int Function(trtc_cloud, tx_view)>();

  /// 9.13 TARGET_PLATFORM_DESKTOP
  int remove_all_included_share_windows(
    trtc_cloud instance,
  ) {
    return _remove_all_included_share_windows(
      instance,
    );
  }

  late final _remove_all_included_share_windowsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud)>>(
          'trtc_cloud_remove_all_included_share_windows');
  late final _remove_all_included_share_windows =
      _remove_all_included_share_windowsPtr
          .asFunction<int Function(trtc_cloud)>();

  /// 9.7
  int set_sub_stream_encoder_param(
    trtc_cloud instance,
    int video_resolution,
    int res_mode,
    int video_fps,
    int video_bitrate,
    int min_video_bitrate,
    bool enable_adjust_res,
  ) {
    return _set_sub_stream_encoder_param(
      instance,
      video_resolution,
      res_mode,
      video_fps,
      video_bitrate,
      min_video_bitrate,
      enable_adjust_res,
    );
  }

  late final _set_sub_stream_encoder_paramPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              trtc_cloud,
              ffi.Int,
              ffi.Int,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Uint32,
              ffi.Bool)>>('trtc_cloud_set_sub_stream_encoder_param');
  late final _set_sub_stream_encoder_param = _set_sub_stream_encoder_paramPtr
      .asFunction<int Function(trtc_cloud, int, int, int, int, int, bool)>();

  /// 10.1
  int enable_custom_video_capture(
    trtc_cloud instance,
    int stream_ype,
    bool enable,
  ) {
    return _enable_custom_video_capture(
      instance,
      stream_ype,
      enable,
    );
  }

  late final _enable_custom_video_capturePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Int, ffi.Bool)>>(
      'trtc_cloud_enable_custom_video_capture');
  late final _enable_custom_video_capture = _enable_custom_video_capturePtr
      .asFunction<int Function(trtc_cloud, int, bool)>();

  /// 10.2
  int send_custom_video_data(
    trtc_cloud instance,
    int stream_type,
    trtc_video_frame_t frame,
  ) {
    return _send_custom_video_data(
      instance,
      stream_type,
      frame,
    );
  }

  late final _send_custom_video_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(trtc_cloud, ffi.Int,
              trtc_video_frame_t)>>('trtc_cloud_send_custom_video_data');
  late final _send_custom_video_data = _send_custom_video_dataPtr
      .asFunction<int Function(trtc_cloud, int, trtc_video_frame_t)>();

  /// 10.3
  int enable_custom_audio_capture(
    trtc_cloud instance,
    bool enable,
  ) {
    return _enable_custom_audio_capture(
      instance,
      enable,
    );
  }

  late final _enable_custom_audio_capturePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(trtc_cloud, ffi.Bool)>>(
          'trtc_cloud_enable_custom_audio_capture');
  late final _enable_custom_audio_capture = _enable_custom_audio_capturePtr
      .asFunction<int Function(trtc_cloud, bool)>();

  /// 10.4
  int send_custom_audio_data(
    trtc_cloud instance,
    trtc_audio_frame_t frame,
  ) {
    return _send_custom_audio_data(
      instance,
      frame,
    );
  }
